# ProyecThor

./: .gitignore  CMakeLists.txt  README.md  imgui.ini  proyecthor_ui.ini
src/: BackgroundLayer.h  OverlayLayer.h  PresentationCore.cpp  PresentationCore.h  VLCBasePlayer.h  main.cpp
src/toolbar/: ConfigPanel.h
src/ui/: UIManager.cpp  UIManager.h
src/ui/panels/: ControlPanel.cpp  ControlPanel.h  IPanel.h  LayersPanel.cpp  LayersPanel.h  LibraryPanel.cpp  LibraryPanel.h  PreviewPanel.cpp  PreviewPanel.h
src/ui/panels/preview/: BibleView.cpp  BibleView.h  MediaView.cpp  MediaView.h  MonitorView.cpp  MonitorView.h  SongView.cpp  SongView.h
src/ui/settings/: AppSettings.h  CategoryAudio.cpp  CategoryGeneral.cpp  CategoryLanguage.cpp  CategoryProjection.cpp  CategoryTheme.cpp  CategoryUpdates.cpp  SettingsManager.cpp  SettingsManager.h  SettingsPanel.cpp  SettingsPanel.h
